--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,5 +43,6 @@
   <dimen name="drawer_layer_item_height">36dp</dimen>
 
   <dimen name="icon_selection_image_size">40dp</dimen>
+  <dimen name="search_box_button_size">30dp</dimen>
 
 </resources>
