more cr changes.

--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -97,7 +97,7 @@
       <EditText
           android:layout_width="0dp"
           android:layout_height="wrap_content"
-          android:layout_weight="0.2"
+          android:layout_weight="0.1"
           android:background="@android:color/transparent"
           android:hint="@string/search"
           android:onTextChanged="@{(text, start, before, count) -> viewModel.onEditSearchBoxResultClicked(text)}"
@@ -107,45 +107,45 @@
 
       <TextView
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="5dp"
-          android:layout_marginTop="-4dp"
-          android:text="0 of 0"
+          android:layout_height="match_parent"
+          android:layout_marginLeft="@dimen/spacing_extra_small"
+          android:gravity="center"
           android:textAlignment="center"
-          android:textSize="15sp"
+          android:textSize="@dimen/text_size_medium"
+          tools:text="0 out of 0"
           />
 
       <View
-          android:layout_width="1dp"
+          android:layout_width="@dimen/separator_width"
           android:layout_height="fill_parent"
-          android:layout_marginLeft="10dp"
+          android:layout_marginLeft="@dimen/spacing_small"
           android:background="@color/black"
           />
 
-      <Button
+      <ImageView
           android:layout_width="@dimen/search_box_button_size"
           android:layout_height="@dimen/search_box_button_size"
           android:layout_gravity="left"
-          android:layout_marginLeft="10dp"
+          android:layout_marginLeft="@dimen/spacing_small"
           android:background="@drawable/ic_keyboard_arrow_up_black_24dp"
           android:onClick="@{() -> viewModel.onPreviousResultSearchClicked()}"
           />
 
-      <Button
+      <ImageView
           android:layout_width="@dimen/search_box_button_size"
           android:layout_height="@dimen/search_box_button_size"
           android:layout_gravity="left"
-          android:layout_marginLeft="10dp"
+          android:layout_marginLeft="@dimen/spacing_small"
           android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
           android:onClick="@{() -> viewModel.onNextResultSearchClicked()}"
           />
-      <Button
+      <ImageView
           android:layout_width="@dimen/search_box_button_size"
           android:layout_height="@dimen/search_box_button_size"
           android:layout_gravity="left"
+          android:layout_marginLeft="@dimen/spacing_small"
           android:background="@drawable/ic_cancel_black_24dp"
           android:onClick="@{() -> viewModel.onSearchDownFabClicked()}"
-          android:paddingLeft="30dp"
           />
     </LinearLayout>
 
