User location drawer list displays their icon next to the user listing

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,6 +32,7 @@
   <dimen name="toast_image_dimension">256dp</dimen>
 
   <!--Image buttons dimensions -->
+  <dimen name="image_button_dimension_small">28dp</dimen>
   <dimen name="image_button_dimension_medium">36dp</dimen>
   <dimen name="image_button_dimension_big">48dp</dimen>
   <dimen name="geometry_style_bar_height">74dp</dimen>
