--- a/app/src/main/res/layout/drawer_user_item_name.xml
+++ b/app/src/main/res/layout/drawer_user_item_name.xml
@@ -4,8 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/spacing_extra_small"
+    android:gravity="bottom"
     android:orientation="horizontal"
     >
+
+  <ImageView
+      android:id="@+id/drawer_user_item_logo"
+      android:layout_width="@dimen/image_button_dimension_medium"
+      android:layout_height="@dimen/image_button_dimension_medium"
+      android:padding="@dimen/spacing_extra_small"
+      tools:src="@drawable/ic_lambda_logo"
+      />
 
   <me.grantland.widget.AutofitTextView
       android:id="@+id/drawer_user_item_name"
@@ -14,8 +23,10 @@
       android:layout_weight="1"
       android:background="@color/transparent"
       android:fontFamily="sans-serif-thin"
+      android:gravity="bottom"
       android:maxLines="1"
       android:padding="2dp"
+      android:textAlignment="gravity"
       android:textSize="@dimen/text_size_medium"
       android:textStyle="bold"
       tools:text="Name of a user"
