--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -110,6 +110,7 @@
           android:layout_height="match_parent"
           android:layout_marginLeft="@dimen/spacing_extra_small"
           android:gravity="center"
+          android:text="@{@string/search_result(viewModel.currentResult,viewModel.resultsAmount)}"
           android:textAlignment="center"
           android:textSize="@dimen/text_size_medium"
           tools:text="0 out of 0"
