--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -88,7 +88,7 @@
     <LinearLayout
         android:id="@+id/search_box"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:visibility="@{viewModel.searchFabVisible ? View.GONE : View.VISIBLE}"
@@ -96,7 +96,7 @@
 
       <EditText
           android:layout_width="0dp"
-          android:layout_height="wrap_content"
+          android:layout_height="match_parent"
           android:layout_weight="1"
           android:background="@android:color/transparent"
           android:hint="@string/search"
@@ -104,7 +104,7 @@
           android:maxLines="1"
           android:onTextChanged="@{(text, start, before, count) -> viewModel.onEditSearchBoxResultClicked(text)}"
           android:paddingLeft="10dp"
-          android:textSize="23sp"
+          android:textSize="@dimen/text_size_large"
           />
 
       <TextView
@@ -114,7 +114,7 @@
           android:gravity="center"
           android:text="@{@string/search_result(viewModel.currentResultNumber,viewModel.resultsAmount)}"
           android:textAlignment="center"
-          android:textSize="@dimen/text_size_medium"
+          android:textSize="@dimen/text_size_large"
           tools:text="0 out of 0"
           />
 
@@ -126,8 +126,8 @@
           />
 
       <ImageView
-          android:layout_width="@dimen/search_box_button_size"
-          android:layout_height="@dimen/search_box_button_size"
+          android:layout_width="@dimen/image_button_dimension_big"
+          android:layout_height="@dimen/image_button_dimension_big"
           android:layout_marginLeft="@dimen/spacing_small"
           android:background="@drawable/ic_keyboard_arrow_up_black_24dp"
           android:clickable="@{viewModel.resultsAmount != 0}"
@@ -135,16 +135,16 @@
           />
 
       <ImageView
-          android:layout_width="@dimen/search_box_button_size"
-          android:layout_height="@dimen/search_box_button_size"
+          android:layout_width="@dimen/image_button_dimension_big"
+          android:layout_height="@dimen/image_button_dimension_big"
           android:layout_marginLeft="@dimen/spacing_small"
           android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
           android:clickable="@{viewModel.resultsAmount != 0}"
           android:onClick="@{() -> viewModel.onNextResultSearchClicked()}"
           />
       <ImageView
-          android:layout_width="@dimen/search_box_button_size"
-          android:layout_height="@dimen/search_box_button_size"
+          android:layout_width="@dimen/image_button_dimension_big"
+          android:layout_height="@dimen/image_button_dimension_big"
           android:layout_marginLeft="@dimen/spacing_small"
           android:background="@drawable/ic_cancel_black_24dp"
           android:onClick="@{() -> viewModel.onSearchDownFabClicked()}"
