--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,8 +43,9 @@
   <dimen name="drawer_layer_item_height">36dp</dimen>
 
   <dimen name="icon_selection_image_size">40dp</dimen>
-  <dimen name="search_box_button_size">30dp</dimen>
+  <dimen name="search_box_button_size">@dimen/image_button_dimension_big</dimen>
   <dimen name="search_box_height">50dp</dimen>
   <dimen name="timeplay_settings_view_height">100dp</dimen>
+
 
 </resources>
