--- a/app/src/main/res/layout/fragment_timeplay_action.xml
+++ b/app/src/main/res/layout/fragment_timeplay_action.xml
@@ -91,6 +91,52 @@
       </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/black"
+        android:text="Play speed:"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_large"
+        />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/black"
+        android:gravity="center"
+        android:orientation="horizontal"
+        >
+
+      <RadioButton
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:buttonTint="@color/white"
+          android:text="low"
+          android:textColor="@color/white"
+          android:textSize="@dimen/text_size_large"
+          />
+      <RadioButton
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="@dimen/spacing_normal"
+          android:buttonTint="@color/white"
+          android:text="medium"
+          android:textColor="@color/white"
+          android:textSize="@dimen/text_size_large"
+          />
+      <RadioButton
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="@dimen/spacing_normal"
+          android:buttonTint="@color/white"
+          android:text="high"
+          android:textColor="@color/white"
+          android:textSize="@dimen/text_size_large"
+          />
+    </RadioGroup>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/timeplay_bottom_panel_height"
