--- a/app/src/main/res/layout/fragment_timeplay_action.xml
+++ b/app/src/main/res/layout/fragment_timeplay_action.xml
@@ -30,112 +30,131 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/timeplay_settings_view_height"
         android:background="@color/black"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:visibility="@{viewModel.isSettingsPanelShown ? View.VISIBLE : View.GONE}"
         >
       <LinearLayout
-          android:layout_width="0dp"
-          android:layout_height="match_parent"
-          android:layout_weight="0.5"
-          android:orientation="vertical"
+          android:layout_width="match_parent"
+          android:layout_height="100dp"
+          android:background="@color/black"
+          android:orientation="horizontal"
+          android:visibility="@{viewModel.isSettingsPanelShown ? View.VISIBLE : View.GONE}"
           >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_small"
-            android:gravity="center_horizontal"
-            android:onClick="@{(v) -> viewModel.onStartDateClicked()}"
-            android:text="@string/start_date"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_large"
-            />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:orientation="vertical"
+            >
+          <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="@dimen/spacing_small"
+              android:gravity="center_horizontal"
+              android:onClick="@{(v) -> viewModel.onStartDateClicked()}"
+              android:text="@string/start_date"
+              android:textAlignment="center"
+              android:textColor="@color/white"
+              android:textSize="@dimen/text_size_large"
+              />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:onClick="@{(v) -> viewModel.onStartDateClicked()}"
-            android:text="@{viewModel.getStartDateText}"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_medium"
-            />
+          <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center_horizontal"
+              android:onClick="@{(v) -> viewModel.onStartDateClicked()}"
+              android:text="@{viewModel.getStartDateText}"
+              android:textAlignment="center"
+              android:textColor="@color/white"
+              android:textSize="@dimen/text_size_medium"
+              />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:orientation="vertical"
+            >
+          <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="@dimen/spacing_small"
+              android:onClick="@{(v) -> viewModel.onEndDateClicked()}"
+              android:text="@string/end_date"
+              android:textAlignment="center"
+              android:textColor="@color/white"
+              android:textSize="@dimen/text_size_large"
+              />
+
+          <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:onClick="@{(v) -> viewModel.onEndDateClicked()}"
+              android:text="@{viewModel.getEndDateText}"
+              android:textAlignment="center"
+              android:textColor="@color/white"
+              android:textSize="@dimen/text_size_medium"
+              />
+        </LinearLayout>
       </LinearLayout>
       <LinearLayout
-          android:layout_width="0dp"
-          android:layout_height="match_parent"
-          android:layout_weight="0.5"
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/speed_control_view_height"
           android:orientation="vertical"
           >
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_small"
-            android:onClick="@{(v) -> viewModel.onEndDateClicked()}"
-            android:text="@string/end_date"
+            android:layout_height="@dimen/text_play_speed_view_height"
+            android:text="@string/choose_speed"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_large"
+            android:visibility="@{viewModel.isSettingsPanelShown ? View.VISIBLE : View.GONE}"
             />
 
-        <TextView
+        <RadioGroup
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{(v) -> viewModel.onEndDateClicked()}"
-            android:text="@{viewModel.getEndDateText}"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_medium"
-            />
+            android:layout_height="@dimen/radio_buttons_view_height"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="@{viewModel.isSettingsPanelShown ? View.VISIBLE : View.GONE}"
+            >
+
+          <RadioButton
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:buttonTint="@color/white"
+              android:checked="@{viewModel.isLowSpeedButtonChecked}"
+              android:onClick="@{(v) -> viewModel.setLowSpeedButtonChecked()}"
+              android:text="@string/low_speed_timeline"
+              android:textColor="@color/white"
+              android:textSize="@dimen/text_size_large"
+              />
+          <RadioButton
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="@dimen/spacing_normal"
+              android:buttonTint="@color/white"
+              android:checked="@{viewModel.isMediumSpeedButtonChecked}"
+              android:onClick="@{(v) -> viewModel.setMediumSpeedButtonChecked()}"
+              android:text="@string/medium_speed_timeline"
+              android:textColor="@color/white"
+              android:textSize="@dimen/text_size_large"
+              />
+          <RadioButton
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="@dimen/spacing_normal"
+              android:buttonTint="@color/white"
+              android:checked="@{viewModel.isHighSpeedButtonChecked}"
+              android:onClick="@{(v) -> viewModel.setHighSpeedButtonChecked()}"
+              android:text="@string/high_speed_timeline"
+              android:textColor="@color/white"
+              android:textSize="@dimen/text_size_large"
+              />
+        </RadioGroup>
       </LinearLayout>
     </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/black"
-        android:text="Play speed:"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_large"
-        />
-
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/black"
-        android:gravity="center"
-        android:orientation="horizontal"
-        >
-
-      <RadioButton
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:buttonTint="@color/white"
-          android:text="low"
-          android:textColor="@color/white"
-          android:textSize="@dimen/text_size_large"
-          />
-      <RadioButton
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="@dimen/spacing_normal"
-          android:buttonTint="@color/white"
-          android:text="medium"
-          android:textColor="@color/white"
-          android:textSize="@dimen/text_size_large"
-          />
-      <RadioButton
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="@dimen/spacing_normal"
-          android:buttonTint="@color/white"
-          android:text="high"
-          android:textColor="@color/white"
-          android:textSize="@dimen/text_size_large"
-          />
-    </RadioGroup>
 
     <LinearLayout
         android:layout_width="match_parent"
