--- a/app/src/main/res/layout/fragment_dynamic_layer_action.xml
+++ b/app/src/main/res/layout/fragment_dynamic_layer_action.xml
@@ -144,7 +144,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8"
+        android:layout_weight="2"
         >
 
       <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
@@ -163,6 +163,13 @@
           style="@style/fab"
           />
     </FrameLayout>
+    <FrameLayout
+        android:id="@+id/dynamic_layer_edit_details_placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:visibility="@{viewModel.detailsPanelVisibility}"
+        />
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottombar_geometry_type"
         android:layout_width="match_parent"
