--- a/app/src/main/res/layout/fragment_dynamic_layer_details_item.xml
+++ b/app/src/main/res/layout/fragment_dynamic_layer_details_item.xml
@@ -1,12 +1,25 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dynamic_layer_details_item_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
-  <TextView
+  <me.grantland.widget.AutofitTextView
       android:id="@+id/dynamic_layer_details_item_text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:maxLines="1"
+      android:paddingBottom="@dimen/spacing_extra_small"
+      android:paddingTop="@dimen/spacing_extra_small"
+      android:textSize="@dimen/text_size_medium"
+      tools:text="Texty time"
       />
 
-</FrameLayout>
+  <View
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/separator_width"
+      android:layout_below="@id/dynamic_layer_details_item_text"
+      android:background="@color/divider"
+      />
+
+</RelativeLayout>
