--- a/app/src/main/res/layout/fragment_timeplay_action.xml
+++ b/app/src/main/res/layout/fragment_timeplay_action.xml
@@ -11,6 +11,7 @@
         type="com.teamagam.gimelgimel.app.map.actions.timeplay.TimeplayViewModel"
         />
     <import type="android.view.View"/>
+    <import type="com.teamagam.gimelgimel.app.map.actions.timeplay.TimeplayViewModel.PlaySpeed"/>
   </data>
 
   <LinearLayout
@@ -67,6 +68,7 @@
               android:textAlignment="center"
               android:textColor="@color/white"
               android:textSize="@dimen/text_size_medium"
+              tools:text="dd/mm/yyyy MM:HH"
               />
         </LinearLayout>
         <LinearLayout
@@ -94,6 +96,7 @@
               android:textAlignment="center"
               android:textColor="@color/white"
               android:textSize="@dimen/text_size_medium"
+              tools:text="dd/mm/yyyy MM:HH"
               />
         </LinearLayout>
       </LinearLayout>
@@ -125,7 +128,7 @@
               android:layout_height="wrap_content"
               android:buttonTint="@color/white"
               android:checked="@{viewModel.isLowSpeedButtonChecked}"
-              android:onClick="@{(v) -> viewModel.setLowSpeedButtonChecked()}"
+              android:onClick="@{(v) -> viewModel.setSpeedButtonChecked(PlaySpeed.Low)}"
               android:text="@string/low_speed_timeline"
               android:textColor="@color/white"
               android:textSize="@dimen/text_size_large"
@@ -136,7 +139,7 @@
               android:layout_marginLeft="@dimen/spacing_normal"
               android:buttonTint="@color/white"
               android:checked="@{viewModel.isMediumSpeedButtonChecked}"
-              android:onClick="@{(v) -> viewModel.setMediumSpeedButtonChecked()}"
+              android:onClick="@{(v) -> viewModel.setSpeedButtonChecked(PlaySpeed.Medium)}"
               android:text="@string/medium_speed_timeline"
               android:textColor="@color/white"
               android:textSize="@dimen/text_size_large"
@@ -147,7 +150,7 @@
               android:layout_marginLeft="@dimen/spacing_normal"
               android:buttonTint="@color/white"
               android:checked="@{viewModel.isHighSpeedButtonChecked}"
-              android:onClick="@{(v) -> viewModel.setHighSpeedButtonChecked()}"
+              android:onClick="@{(v) -> viewModel.setSpeedButtonChecked(PlaySpeed.High)}"
               android:text="@string/high_speed_timeline"
               android:textColor="@color/white"
               android:textSize="@dimen/text_size_large"
@@ -168,7 +171,6 @@
           android:layout_height="@dimen/timeplay_bottom_panel_height"
           android:background="@drawable/ic_settings"
           android:onClick="@{(v) -> viewModel.onTimePlaySettingsPanelClicked()}"
-          tools:src="@drawable/ic_settings"
           />
 
       <android.support.v7.widget.AppCompatImageView
