--- a/app/src/main/res/layout/fragment_dynamic_layer_action.xml
+++ b/app/src/main/res/layout/fragment_dynamic_layer_action.xml
@@ -141,6 +141,58 @@
           tools:src="@drawable/ic_map_marker"
           />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:background="@color/transparent"
+        android:orientation="horizontal"
+        android:visibility="@{viewModel.isEditDescriptionVisible ? View.GONE : View.VISIBLE}"
+        >
+      <android.support.design.widget.FloatingActionButton
+          android:id="@+id/fab_dynamic_layer_description_edit"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_margin="@dimen/spacing_small"
+          android:alpha="0.7"
+          android:onClick="@{() -> viewModel.onEditDescriptionFabClicked()}"
+          app:fabSize="mini"
+          app:srcCompat="@drawable/ic_search_black_24dp"
+          />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/edit_description_box"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/search_box_height"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:visibility="@{viewModel.isEditDescriptionVisible ? View.VISIBLE : View.GONE}"
+        >
+
+      <EditText
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="1"
+          android:background="@android:color/transparent"
+          android:hint="@string/layer_description"
+          android:inputType="text"
+          android:maxLines="1"
+          android:onTextChanged="@{(text, start, before, count) -> viewModel.onEditDescriptionTextChange(text)}"
+          android:paddingLeft="10dp"
+          android:textSize="@dimen/text_size_large"
+          />
+
+      <ImageView
+          android:layout_width="@dimen/search_box_button_size"
+          android:layout_height="@dimen/search_box_button_size"
+          android:layout_marginLeft="@dimen/spacing_small"
+          android:background="@drawable/ic_cancel_black_24dp"
+          android:onClick="@{() -> viewModel.onEditDescriptionFabClicked()}"
+          />
+    </LinearLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
