--- a/app/src/main/res/layout/esri_gg_map_view.xml
+++ b/app/src/main/res/layout/esri_gg_map_view.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     >
 
-  <com.esri.android.map.MapView
+  <com.esri.arcgisruntime.mapping.view.SceneView
       android:id="@+id/map_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
 
-  </com.esri.android.map.MapView>
+  </com.esri.arcgisruntime.mapping.view.SceneView>
 </FrameLayout>
