Opening phase action when clicking the information icon next to a phase layer listing. Logging dynamic layer details listing interactions. Displaying the dynamic layer details panel for each phase. Changed BaseMapViewModel to handle late creation of the viewmodel (after the create method) so it'll display the different map entities . Included the dynamic layers that are inside the phase layers to pool of dynamic layers that can be presented in the dynamic layer's detail fragment.

--- a/app/src/main/res/layout/fragment_phase.xml
+++ b/app/src/main/res/layout/fragment_phase.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     >
   <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
+      android:id="@+id/phase_map"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="7"
